[project]
name = "hateraide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.90.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.32.4",
    "pydantic>=2.5.0",
    "aiohttp>=3.12.13",
]
